Update tellme tryit functions